# SwarmCoordinationSimulator

./: .gitignore  LICENSE  README.md  pyproject.toml
artifacts/experiments/latest/: summary.csv
artifacts/experiments/latest/playbacks/: consensus-baseline.json  greedy-dropout.json
src/swarm_sim/: __init__.py  benchmark_transport.py  cli.py  experiments.py  navigation.py  profile.py  raft.py  runtime.py  server.py  simulator.py  swarmraft.py  taichi_backend.py  transport.py
src/swarm_sim/static/: index.html
tests/: test_cli.py  test_experiments.py  test_navigation.py  test_runtime.py  test_server.py  test_simulator.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.jsx  page.jsx
web/app/cli/: page.jsx
web/app/compare/: page.jsx
web/app/docs/: page.jsx
web/components/: site-header.jsx  swarm-console.jsx  swarm-scene.jsx
web/public/data/latest/: manifest.json  run_summaries.json
web/public/data/latest/playbacks/: consensus-dropout.json  low-comms-consensus.json
